--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,12 +7,12 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_gym"
         android:icon="@drawable/ic_gym"
         android:title="@string/title_gym" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_running"
         android:icon="@drawable/ic_running"
         android:title="@string/title_running" />
 
