--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,14 +12,14 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="apc.appcradle.trainingdiary.ui.dashboard.DashboardFragment"
+        android:id="@+id/navigation_gym"
+        android:name="apc.appcradle.trainingdiary.ui.dashboard.GymFragment"
         android:label="@string/title_gym"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_gym" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="apc.appcradle.trainingdiary.ui.notifications.NotificationsFragment"
+        android:id="@+id/navigation_running"
+        android:name="apc.appcradle.trainingdiary.ui.notifications.RunningFragment"
         android:label="@string/title_running"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_running" />
 </navigation>
