--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="stop_red">#E57373</color>
+    <color name="start_green">#81C784</color>
+    <color name="pause_yellow">#FFB74D</color>
+
 </resources>
