--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,13 +13,13 @@
 
     <fragment
         android:id="@+id/navigation_gym"
-        android:name="apc.appcradle.trainingdiary.ui.dashboard.GymFragment"
+        android:name="apc.appcradle.trainingdiary.ui.gym.GymFragment"
         android:label="@string/title_gym"
         tools:layout="@layout/fragment_gym" />
 
     <fragment
         android:id="@+id/navigation_running"
-        android:name="apc.appcradle.trainingdiary.ui.notifications.RunningFragment"
+        android:name="apc.appcradle.trainingdiary.ui.running.RunningFragment"
         android:label="@string/title_running"
         tools:layout="@layout/fragment_running" />
     <fragment
