--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -7,66 +7,123 @@
     tools:context=".ui.timer.TimerFragment">
 
     <EditText
-        android:id="@+id/input"
+        android:id="@+id/inputHours"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="50dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="32dp"
         android:autofillHints="input"
-        android:inputType="number"
-        android:hint="input here your seconds"
         android:gravity="center"
+        android:hint="hours"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="LabelFor" />
+
+    <EditText
+        android:id="@+id/inputMinutes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:autofillHints="input"
+        android:gravity="center"
+        android:hint="minutes"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="@+id/inputHours"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/inputHours"
+        app:layout_constraintTop_toBottomOf="@+id/inputHours"
+        tools:ignore="LabelFor" />
+
+    <EditText
+        android:id="@+id/inputSeconds"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:autofillHints="input"
+        android:gravity="center"
+        android:hint="seconds"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="@+id/inputHours"
+        app:layout_constraintHorizontal_bias="0.75"
+        app:layout_constraintStart_toStartOf="@+id/inputHours"
+        app:layout_constraintTop_toBottomOf="@+id/inputMinutes"
+        tools:ignore="LabelFor" />
+
+    <EditText
+        android:id="@+id/inputMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:autofillHints="input"
+        android:gravity="center"
+        android:hint="message of notification, if you want"
+        android:inputType="text"
+        app:layout_constraintEnd_toEndOf="@+id/inputHours"
+        app:layout_constraintStart_toStartOf="@+id/inputHours"
+        app:layout_constraintTop_toBottomOf="@+id/inputSeconds"
         tools:ignore="LabelFor" />
 
     <TextView
         android:id="@+id/counter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="16dp"
         android:text="@string/title_timer"
-        android:textSize="34sp"
+        android:textSize="45sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/input" />
+        app:layout_constraintTop_toBottomOf="@+id/inputMessage" />
 
     <Button
         android:id="@+id/start_button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="100dp"
         android:backgroundTint="#2A9716"
         android:text="@string/button_start"
         android:textAllCaps="true"
-        app:layout_constraintEnd_toEndOf="@+id/counter"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/counter"
+        app:layout_constraintEnd_toEndOf="@+id/inputHours"
+        app:layout_constraintStart_toStartOf="@+id/inputHours"
         app:layout_constraintTop_toBottomOf="@+id/counter" />
 
     <Button
         android:id="@+id/stop_button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="168dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="100dp"
         android:backgroundTint="#D75347"
         android:text="stop"
         android:textAllCaps="true"
-        app:layout_constraintEnd_toEndOf="@+id/counter"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/counter"
-        app:layout_constraintTop_toBottomOf="@+id/counter" />
+        app:layout_constraintEnd_toEndOf="@+id/start_button"
+        app:layout_constraintStart_toStartOf="@+id/start_button"
+        app:layout_constraintTop_toBottomOf="@+id/start_button" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="32dp"
         android:text="Auto repeat after ending?"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/start_button" />
+        app:layout_constraintTop_toBottomOf="@+id/stop_button" />
 
     <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/switcherUnlimitedCounter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="40dp"
