--- a/app/src/main/res/layout/fragment_running.xml
+++ b/app/src/main/res/layout/fragment_running.xml
@@ -33,20 +33,20 @@
 
     <Button
         android:id="@+id/start"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="88dp"
         android:backgroundTint="@color/start_green"
-        android:text="go to run"
+        android:text="go to run!"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timer_text" />
 
     <Button
         android:id="@+id/pause"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="32dp"
         android:backgroundTint="@color/pause_yellow"
         android:text="pause"
         app:layout_constraintEnd_toEndOf="@+id/start"
@@ -55,9 +55,9 @@
 
     <Button
         android:id="@+id/end_and_reset"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="32dp"
         android:backgroundTint="@color/stop_red"
         android:text="end running"
         app:layout_constraintEnd_toEndOf="@+id/pause"
