--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -86,11 +86,9 @@
 
     <Button
         android:id="@+id/start_button"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="100dp"
         android:backgroundTint="@color/start_green"
         android:text="@string/button_start"
         android:textAllCaps="true"
@@ -100,11 +98,9 @@
 
     <Button
         android:id="@+id/stop_button"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginTop="32dp"
         android:backgroundTint="@color/stop_red"
         android:text="stop"
         android:textAllCaps="true"
